# chili3d

./: .dockerignore  .gitignore  .prettierignore  .prettierrc  AGENTS.md  Dockerfile  README.md  biome.json  compose.yml  docker-compose.yaml  jest.config.js  package-lock.json  package.json  rspack.config.js  rspack.config.ts  rstest-setup.ts  rstest.config.ts  rstest.wasm.config.ts  settings.json  tsconfig.json  webpack.common.js  webpack.dev.js  webpack.prod.js
.github/workflows/: ci.yml  main.yml
cpp/: CMakeLists.txt  CMakePresets.json  README.md
cpp/src/: converter.cpp  faceMesh.cpp  factory.cpp  geometry.cpp  helps.cpp  interface.cpp  math.hpp  mesher.cpp  occ.cpp  opencascade.cpp  shape.cpp  shapeFactory.cpp  shared.cpp  shared.hpp  transient.cpp  utils.cpp  utils.hpp
cpp/test/: index.html  main.js  test.js
docs/: MCP_SETUP.md
plugins/: rspackOptions.ts
plugins/helloworld-js/: .gitignore  README.md  importMap.json  manifest.json  package.json
plugins/helloworld-js/src/: extension.js  module1.js  module2.js
plugins/helloworld-ts/: .gitignore  README.md  importmap.json  manifest.json  package-lock.json  package.json  rspack.config.ts  tsconfig.json
plugins/helloworld-ts/src/: index.ts  modules.d.ts
plugins/helloworld-ts/src/commands/: hello.ts
plugins/macro/: manifest.json  package-lock.json  package.json  rspack.config.ts  tsconfig.json
plugins/macro/src/: css.d.ts  index.ts
plugins/macro/src/commands/: macro.ts
plugins/macro/src/macro/: macro.module.css  macroEditor.ts  macroManager.ts  macroRunner.ts  macroStorage.ts
plugins/scripts/: package-plugin.mjs
plugins/visual-programming/: manifest.json  package-lock.json  package.json  rspack.config.ts
plugins/visual-programming/src/: command.ts  context-menu.module.css  editor.module.css  editor.ts  index.ts  tools.ts  tree.ts  types.ts
plugins/visual-programming/src/asserts/: iconfont.js
plugins/visual-programming/src/controls/: panel.ts  slider.ts
plugins/visual-programming/src/customs/: connection.ts  node.ts  socket.ts
plugins/visual-programming/src/i18n/: cn.ts  en.ts  keys.ts
plugins/visual-programming/src/nodes/geometry/: arc.ts  base.ts  box.ts  circle.ts  divideCurve.ts  edgeCurve.ts  faceSurface.ts  line.ts  point.ts  rect.ts
plugins/visual-programming/src/nodes/input/: number.ts  panel.ts  slider.ts
plugins/visual-programming/src/nodes/list/: listConcat.ts  listGetFirst.ts  listGetItem.ts  listGetLast.ts  listLength.ts  listReverse.ts  listShift.ts
plugins/visual-programming/src/nodes/math/: add.ts  ceil.ts  cos.ts  crossProduct.ts  division.ts  dotProduct.ts  floor.ts  mod.ts  multiply.ts  normalize.ts  plane.ts  round.ts  sin.ts  sub.ts  tan.ts  vectorLength.ts  xyz.ts
public/: iconfont.js  index.css  index.html
public/plugins/: helloworld-ts.chiliplugin  macro.chiliplugin  plugins.json
public/plugins/helloworld-js/: manifest.json
public/plugins/helloworld-js/src/: extension.js
scripts/: add_copyright.mjs  build-plugins.mjs  common.mjs  generate_types.mjs  release.mjs  setup_wasm_deps.mjs  version.mjs
